# string_master_v.4.0

./: .gitignore  .gitlab-ci.yml  .gitmodules  ACADEMIC_PAPER.md  CBSP21.md  CHANGELOG.md  CLEANUP_PLAN.md  CLEANUP_PROGRESS_BOOKMARK.md  CLI_DOCUMENTATION.md  CORE_LOCK_REPORT.md  Canon v1.md  DEVELOPER_GUIDE.md  Etude_10_PorMedio_Dense_Backdoor3.mid  Etude_11_PorArriba_Dense_Backdoor3.mid  Etude_13_PorMedio_bII_Toggle.mid  Etude_16_PorMedio_AB.mid  Etude_18_Taranta_AB.mid  Etude_19_PorMedio_AB_SingleLine.mid  Etude_1_PorMedio_Backdoor.mid  Etude_2_PorArriba_Backdoor.mid  Etude_7_PorMedio_Backdoor3.mid  Etude_8_PorArriba_Backdoor3.mid  Etude_9_TarantaSlow_Backdoor3.mid  FAQ.md  FORMAL_PROOFS.md  FORMAT_GUIDE.md  GLOSSARY.md  GOVERNANCE.md  LICENSE  LICENSE-THEORY.md  MUSICAL_CONTRACT_LOCK.md  Makefile  Mode 1_Coach v1_models_policies_serializer_tests.txt  NOTATION_CONVENTIONS.md  PEDAGOGY.md  PYTHON_PACKAGE.md  QUICK_REFERENCE.md  README.md  SESSION_2026-01-14.md  STUDENT_ASSESSMENT_RUBRICS.md  (+100 more)
.github/: copilot-instructions.md
backup_pre_migration/: barry_harris_canonical.json  bluegrass_canonical.json  bucket_a_canonical.json  cycles_canonical.json  enclosures_canonical.json  flamenco_canonical.json  got_rhythm_canonical.json  minor_gravity_canonical.json  phrases_canonical.json  voicings_canonical.json
docs/: ACCEPTANCE.md  ARCHETYPE_DICTIONARY.md  ARCHITECTURE.md  ARCHIVE_INDEX.md  ARDOUR_QUICKSTART.md  ARRANGER_FEATURE_GAP_ANALYSIS.md  BOOKMARK_SG_COACH_SPEC_REVIEW.md  BRAND_STYLE_GUIDE.md  BUILD_READINESS_EVALUATION.md  CANON.md  CBSP21.md  CLOUD_COMPANION_ARCHITECTURE.md  CONTRACTS.md  DAW_WORKFLOW.md  DEVELOPER_GUIDE.md  ECOSYSTEM_REPORT.md  EXAMPLES_HTML.md  FAQ.md  HANDOFF_2026-02-02.md  INSTRUCTOR_CERTIFICATION.md  LATEX_COMPILATION_GUIDE.md  LATIN_AFROCUBAN_TAXONOMY.md  MIDI_GENERATOR_HANDOFF.md  MIDI_GENERATOR_INTEGRATION.md  MIDI_GENERATOR_SPEC_ANSWERS.md  PEDAGOGY_AND_TAXONOMY_MAP.md  PROJECT_COMPLETE.md  PROJECT_STRUCTURE.md  REAPER_SCRIPTS.md  SEED_SOURCES.md  SEED_SOURCES_QUICKSTART.md  SNAPSHOT_v1.md  START_HERE.md  SYSTEM_FLOW.md  VELOCITY_CONTOUR_PRESETS.md  ZONE_TRITONE_DEVELOPER_GUIDE.md  blue_bossa_analysis.md  c_major_analysis.md  dominant_example.md  string-master-design-review.md  (+2 more)
examples/: dominant-chains.md  ii-V-I_analysis.md  melodic-minor.md  tritone-motion.md
exercises/: .gitignore  cycle_dominants_tritone_subs.ztex  cycle_fifths_roots.ztex  cycle_fifths_roots_awareness.ztex  cycle_fourths_ii_v_i_guidetones.ztex  cycle_thirds_guidetones.ztex  cycle_thirds_tritone.ztex  minor_gravity_harmonic_b9_resolution.ztex  minor_gravity_melodic_guidetones.ztex
groove_layer_v0_stage_2_5/: README.md
groove_layer_v0_stage_2_6/: README.md
groove_layer_v0_stage_2_7/: README.md  diff_stage_2_6_to_2_7.patch
groove_layer_v0_stage_2_8/: README.md  diff_stage_2_7_to_2_8.patch
groove_layer_v0_stage_2_8_fixed/: README.md  diff_stage_2_4_to_2_5.patch  diff_stage_2_5_to_2_6.patch
groove_layer_v0_stage_2_8a_tempo_only_spike/: NON_CANONICAL_SPIKE.txt  README.md
groove_layer_v0_stage_2_9/: README.md  diff_stage_2_3_to_2_4.patch  diff_stage_2_7_to_2_8.patch  diff_stage_2_8_to_2_9.patch
groove_layer_v0_stage_3_0_clean_skeleton (1)/: README.md
logs/: .gitkeep
motivic_etudes_pack/: etude_1_C_backdoor.mid  etude_1_C_backdoor_v2.mid  etude_1_alt_a_100bpm.mid  etude_1_alt_b_100bpm.mid  etude_1_medium_110bpm.mid  etude_1_slow_90bpm.mid  etude_1_uptempo_130bpm.mid  etude_2_C_backdoor.mid  etude_2_C_backdoor_v2.mid  etude_2_alt_a_100bpm.mid  etude_2_alt_b_100bpm.mid  etude_2_medium_110bpm.mid  etude_2_slow_90bpm.mid  etude_2_uptempo_130bpm.mid  etude_3_C_backdoor.mid  etude_3_C_backdoor_v2.mid  etude_3_alt_a_100bpm.mid  etude_3_alt_b_100bpm.mid  etude_3_medium_110bpm.mid  etude_3_slow_90bpm.mid  etude_3_uptempo_130bpm.mid
packs/: afrobeat_fela_style_v1.dpack.json  boogaloo_latin_soul_v1.dpack.json  bossa_nova_classic_v1.dpack.json  country_train_beat_v1.dpack.json  disco_four_on_floor_v1.dpack.json  flamenco_por_medio_v1.dpack.json  funk_16th_pocket_v1.dpack.json  gospel_shout_shuffle_v1.dpack.json  hiphop_half_time_v1.dpack.json  neo_soul_laidback_pocket_v1.dpack.json  salsa_clave_locked_v1.dpack.json  samba_traditional_v1.dpack.json  swing_basic_v1.dpack.json
papers/: README.md  (+7 more)
(+1695 files in other folders)
