[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zone-tritone"
version = "0.1.0"
description = "Zone–Tritone System: harmonic zones, tritone gravity, and probabilistic gravity chains in Python."
authors = [
  { name = "Greg Brown" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["music", "harmony", "jazz", "theory", "tritone", "markov"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Artistic Software",
]

[project.urls]
Homepage = "https://github.com/your-user/zone-tritone"

[project.scripts]
zt-gravity = "zone_tritone.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
