[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-guitar"
version = "0.1.0"
description = "Smart Guitar Platform: Zone-Tritone theory engine, accompaniment tools, and practice utilities for guitarists."
authors = [
  { name = "Greg Brown" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["music", "harmony", "jazz", "theory", "tritone", "markov"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Artistic Software",
]
dependencies = [
  "mido>=1.2.10",
  "pyyaml>=6.0"
]

[project.urls]
Homepage = "https://github.com/HanzoRazer/string_master_v.4.0"

[project.scripts]
zt-gravity = "shared.zone_tritone.cli:main"
zt-band = "zt_band.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
