[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-guitar"
version = "0.1.0"
description = "Smart Guitar Platform: Zone-Tritone theory engine, accompaniment tools, and practice utilities for guitarists."
authors = [
  { name = "Greg Brown" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["music", "harmony", "jazz", "theory", "tritone", "markov"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Artistic Software",
]
dependencies = [
  "mido>=1.2.10",
  "pyyaml>=6.0",
  "pydantic>=2,<3",
  "sg-spec @ git+https://github.com/HanzoRazer/sg-spec.git",
]

[project.optional-dependencies]
# Developer tooling used by CI and local contributors.
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.5",
  "mypy>=1.7",
  "types-PyYAML",
]
# sg-agentd HTTP server dependencies
agentd = [
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
  "httpx>=0.24.0",  # For TestClient
]

[project.urls]
Homepage = "https://github.com/HanzoRazer/string_master_v.4.0"

[project.scripts]
zt-gravity = "shared.zone_tritone.cli:main"
zt-band = "zt_band.cli:main"
sgc = "sg_spec.ai.coach.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict= (Python 3.10+)
]

[tool.ruff.lint.isort]
known-first-party = ["shared", "zt_band"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
